--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-cozy-chess = "0.2.1"
+cozy-chess = "0.3"
 memmap = "0.7.0"
 ouroboros = "0.14.0"
+
+[patch.crates-io]
+cozy-chess = { git = "https://github.com/analog-hors/cozy-chess" }
